[package]
name = "dir-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
custom_debug = "0.6.2"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
